--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,57 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-font: "IBM Plex mono";
+  /* текст заливки заголовков h3*/
+  --accent-color: #ff8dcb;
+  /* текст основного заголовка no focus*/
+  --heading-color: #ffc2e6;
+  /* не знаю где использовать*/
+  --decor-visibility: #fff1f7;
+  --content-title-color: #353430;
+  /* текст основного контента блоков*/
+  --text-color: #353430;
+  /* текст в кнопках переключения*/
+  --text-button: #353430;
+  /* текст фона*/
+  --bg-color: #fff1f7;
+  --link-color: #353430;
+  --rec-color: #fff1f7;
+  --head-color: #353430;
+  background-image: url(../images/cover-image-light.png);
+  --bg-image: url(../image/cover-image-light.png);
+}
+
+:root.page.theme_light {
+  --main-font: "IBM Plex mono";
+  --heading-color: #ffc2e6;
+  --text-color: #353430;
+  --accent-color: #ff8dcb;
+  --text-button: #353430;
+  --decor-visibility: #fff1f7;
+  --head-color: #353430;
+  --content-title-color: #353430;
+  --bg-color: #fff1f7;
+  --link-color: #353430;
+  --rec-color: #fff1f7;
+  background-image: url(../image/cover-image-light.png);
+  --bg-image: url(../image/cover-image-light.png);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-font: "IBM Plex mono";
+    --heading-color: #ffc2e6;
+    --text-color: #353430;
+    --accent-color: #ff8dcb;
+    --text-button: #353430;
+    --decor-visibility: #fff1f7;
+    --head-color: #353430;
+    --content-title-color: #353430;
+    --bg-color: #fff1f7;
+    --link-color: #353430;
+    --rec-color: #fff1f7;
+    background-image: url(../images/cover-image-light.png);
+    --bg-image: url(../image/cover-image-light.png);
+  }
 }
