--- a/styles/dark.css
+++ b/styles/dark.css
@@ -18,6 +18,7 @@
      --main-font: "IBM Plex mono";
   /* текст заливки заголовков h3*/
   --main-font: "IBM Plex mono";
+  --alternativ-font: monospace;
   /* текст заливки заголовков h3*/
   --mainFS: 18px;
   --mainFW: 400;
@@ -38,8 +39,10 @@
   /* текст фона*/
   --bg-color: #000028;
   --link-color: #ff0070;
+  --link-text-color: #f1b2ce;
   --rec-color: #ff0070;
   --head-color: #000028;
+  --hover-color: rgba(255, 0, 112, 0.4);
   --bg-image: url(../images/cover-image-dark.png);
   background-image: url(../images/cover-image-dark.png);
 }
