--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,7 @@
   padding: 0px 13px 0px 13px;
   color: var(--link-color);
   outline-style: none;
+  cursor: pointer;
 }
 
 .header__theme-menu-button_active {
